internal class AnimationStrings
{
    internal static string isMoving = "isMoving";
    internal static string isRunning = "isRunning";
    internal static string isGrounded = "isGrounded";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCeiling = "isOnCeiling";
    internal static string yVelocity = "yVelocity";
    internal static string jumpTrigger = "jump";
    internal static string attactTrigger = "attact";
    internal static string canMove = "canMove";
}